--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   
 
 	<!-- Amanda's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center><em>"...Jamie Clark is the most driven, focused, and hard-working student I have ever had. She is detail oriented, organized, and incredibly responsible. I would trust Jamie with any task in any venue at any time and I know she would go above and beyond to get the job done...Lastly, I think most importantly, Jamie has a huge heart. She cares for others, is kind and respectful of all, and is incredibly thoughtful..."</em><br> - <strong>Amanda Lombard</strong><br>Mathematics Professor<br>Cuesta College</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center><em>"...Jamie Clark is the most driven, focused, and hard-working student I have ever had. She is detail oriented, organized, and incredibly responsible. I would trust Jamie with any task in any venue at any time and I know she would go above and beyond to get the job done...Lastly, I think most importantly, Jamie has a huge heart. She cares for others, is kind and respectful of all, and is incredibly thoughtful..."<center><a href="Jamie Clark.pdf"></a></center></em><br> - <strong>Amanda Lombard</strong><br>Mathematics Professor<br>Cuesta College</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
