--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	
 	
 	<!-- Shelby's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Some tutors mean well, but are lacking the actual skill themselves. Not Jamie. The proof is in the pudding, and that particular class that Jamie tutored was my highest achieving PreCalculus course to date. I believe this to be because of Jamie’s help..."</em><br> - <strong>Shelby L. Burnett</strong><br>Mathematics Professor<br>Cuesta College</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Some tutors mean well, but are lacking the actual skill themselves. Not Jamie. The proof is in the pudding, and that particular class that Jamie tutored was my highest achieving PreCalculus course to date. I believe this to be because of Jamie’s help..."<center><a href="JamieCrec.pdf"></a></center></em><br> - <strong>Shelby L. Burnett</strong><br>Mathematics Professor<br>Cuesta College</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
