--- a/index.html
+++ b/index.html
@@ -101,6 +101,17 @@
 	</center>
 	</p>
 	
+	<!-- Joe's Letter -->
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Jamie has been a good role model and metor for other tutors. Besides working full time while being a full time student, she is maintain a 3.82 GPA, she is a member of Alpha Gamma Sigma, and she regularly serves in the community..."<center><a href="JamieCrec.pdf"></a></center></em><br> - <strong>Joseph C. Vasta, Ph.D.</strong><br>Mathematics Professor<br>Cuesta College</center>
+		<center>
+	<span style="font-size:300%;color:yellow;">&starf;</span>
+	<span style="font-size:300%;color:yellow;">&starf;</span>
+	<span style="font-size:300%;color:yellow;">&starf;</span>
+	<span style="font-size:300%;color:yellow;">&starf;</span>
+	<span style="font-size:300%;color:yellow;">&starf;</span>
+	</center>
+	</p>
+	
 	<!-- Siboney's Letter -->
 	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Jamie is responsible, self-motivated and with a great attitude. She demonstrates skills at troubleshooting problems to determine solutions and excels in using available resources on campus..."<center><a href="letterofrec.pdf">read more</a></center></em><br> - <strong>Siboney Guardado</strong><br>Associate Director<br>Cuesta College</center>
 		<center>
