--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <h2> <center> <strong> REVIEWS  </strong> <center> </h2>
 	
 	<!-- Que's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center> "...Jamie is positive and generous, providing a welcoming attitude to all who meet her. She is a great collaborator who works well with other students, providing leadership, commitment, and passion for everything she does. She is a hard worker, quick learner, and will be an amazing addition to any team..." </em><br> - <strong>Que Dang, MPH</strong><br>Director, Student Equity and Success Center<br>Cuesta College, San Luis Obispo</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center> "...Jamie is positive and generous, providing a welcoming attitude to all who meet her. She is a great collaborator who works well with other students, providing leadership, commitment, and passion for everything she does. She is a hard worker, quick learner, and will be an amazing addition to any team..." <center><a href="Jamie Clark letter of rec.pdf"></a></center></em><br> - <strong>Que Dang, MPH</strong><br>Director, Student Equity and Success Center<br>Cuesta College, San Luis Obispo</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
