--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <h2> <center> <strong> REVIEWS  </strong> <center> </h2>
 	
 	<!-- Que's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center> "...Jamie is positive and generous, providing a welcoming attitude to all who meet her. She is a great collaborator who works well with other students, providing leadership, commitment, and passion for everything she does. She is a hard worker, quick learner, and will be an amazing addition to any team..." <center><a href="Jamie Clark letter of rec.pdf"></a></center></em><br> - <strong>Que Dang, MPH</strong><br>Director, Student Equity and Success Center<br>Cuesta College, San Luis Obispo</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center> "...Jamie is positive and generous, providing a welcoming attitude to all who meet her. She is a great collaborator who works well with other students, providing leadership, commitment, and passion for everything she does. She is a hard worker, quick learner, and will be an amazing addition to any team..." <center><a href="Jamie Clark letter of rec.pdf">read more</a></center></em><br> - <strong>Que Dang, MPH</strong><br>Director, Student Equity and Success Center<br>Cuesta College, San Luis Obispo</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
@@ -67,7 +67,7 @@
 		</p>
 	
 	<!-- Alysha's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center><em>"...Whaterver your standard of excellence, Jamie will exceed your expectations. She has an uncanny ability to see ineffeciences and areas in need of improvement, as well as map out comprehensive solutions to resolve them. I appreciate her solution-oriented persepctive and communication syle..."<center><a href="jamies_letter.pdf"></a></center><br> - <strong>Alysha Nye</strong></em><br>Academic Success Coach<br>Student Success Center, Statistics Lab</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center><em>"...Whaterver your standard of excellence, Jamie will exceed your expectations. She has an uncanny ability to see ineffeciences and areas in need of improvement, as well as map out comprehensive solutions to resolve them. I appreciate her solution-oriented persepctive and communication syle..."<center><a href="jamies_letter.pdf">read more</a></center><br> - <strong>Alysha Nye</strong></em><br>Academic Success Coach<br>Student Success Center, Statistics Lab</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
@@ -79,7 +79,7 @@
   
 
 	<!-- Amanda's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center><em>"...Jamie Clark is the most driven, focused, and hard-working student I have ever had. She is detail oriented, organized, and incredibly responsible. I would trust Jamie with any task in any venue at any time and I know she would go above and beyond to get the job done...Lastly, I think most importantly, Jamie has a huge heart. She cares for others, is kind and respectful of all, and is incredibly thoughtful..."<center><a href="Jamie Clark.pdf"></a></center></em><br> - <strong>Amanda Lombard</strong><br>Mathematics Professor<br>Cuesta College</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center><em>"...Jamie Clark is the most driven, focused, and hard-working student I have ever had. She is detail oriented, organized, and incredibly responsible. I would trust Jamie with any task in any venue at any time and I know she would go above and beyond to get the job done...Lastly, I think most importantly, Jamie has a huge heart. She cares for others, is kind and respectful of all, and is incredibly thoughtful..."<center><a href="Jamie Clark.pdf">read more</a></center></em><br> - <strong>Amanda Lombard</strong><br>Mathematics Professor<br>Cuesta College</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
@@ -91,7 +91,7 @@
 	
 	
 	<!-- Shelby's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Some tutors mean well, but are lacking the actual skill themselves. Not Jamie. The proof is in the pudding, and that particular class that Jamie tutored was my highest achieving PreCalculus course to date. I believe this to be because of Jamie’s help..."<center><a href="JamieCrec.pdf"></a></center></em><br> - <strong>Shelby L. Burnett</strong><br>Mathematics Professor<br>Cuesta College</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Some tutors mean well, but are lacking the actual skill themselves. Not Jamie. The proof is in the pudding, and that particular class that Jamie tutored was my highest achieving PreCalculus course to date. I believe this to be because of Jamie’s help..."<center><a href="JamieCrec.pdf">read more</a></center></em><br> - <strong>Shelby L. Burnett</strong><br>Mathematics Professor<br>Cuesta College</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
@@ -102,7 +102,7 @@
 	</p>
 	
 	<!-- Joe's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Jamie has been a good role model and metor for other tutors. Besides working full time while being a full time student, she is maintain a 3.82 GPA, she is a member of Alpha Gamma Sigma, and she regularly serves in the community..."<center><a href="Jamie_Clark_Letter.pdf"></a></center></em><br> - <strong>Joseph C. Vasta, Ph.D.</strong><br>Mathematics Professor<br>Cuesta College</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center>"...Jamie has been a good role model and metor for other tutors. Besides working full time while being a full time student, she is maintain a 3.82 GPA, she is a member of Alpha Gamma Sigma, and she regularly serves in the community..."<center><a href="Jamie_Clark_Letter.pdf">read more</a></center></em><br> - <strong>Joseph C. Vasta, Ph.D.</strong><br>Mathematics Professor<br>Cuesta College</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
