--- a/index.html
+++ b/index.html
@@ -34,13 +34,12 @@
 	  
 <div  style="padding: 50px; background-color:#87A3BD;">
 <h3> <center> <strong> SKILLS & TOOLS </strong> <center> </h3>
-	</div>
 	<div class="progress">
-  <div class="progress-bar" role="progressbar" aria-valuenow="70"
-  aria-valuemin="0" aria-valuemax="100" style="width:70%">
+  <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
     <span class="sr-only">Python</span>
   </div>
 </div>
+	</div>
 
 <!-- Projects -->
 	
