--- a/index.html
+++ b/index.html
@@ -34,11 +34,8 @@
 	  
 <div  style="padding: 50px; background-color:#87A3BD;">
 <h3> <center> <strong> SKILLS & TOOLS </strong> <center> </h3>
-	<div class="progress">
-  <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-    <span class="sr-only">Python</span>
-  </div>
-</div>
+	<h4>Python</h4>
+	<progress value="65" max="100"/>
 	</div>
 
 <!-- Projects -->
