--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 	  
 <div  style="padding: 50px; background-color:#87A3BD;">
 <h3> <center> <strong> SKILLS & TOOLS </strong> <center> </h3>
-	<h4>Python</h4>
-	<progress value="65" max="100"/>
+	<p>Python</p <progress value="65" max="100"/>>
+		
 	</div>
 
 <!-- Projects -->
