--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	  
 <div  style="padding: 50px; background-color:#87A3BD;">
 <h3> <center> <strong> SKILLS & TOOLS </strong> <center> </h3>
-	<p>Python</p <progress value="65" max="100"/>>
+	<center> <p>Python</p> <progress value="65" max="100"/> </center>
 		
 	</div>
 
