--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <body>
 	<title>Jamie Clark</title>
+	<style>
+		progress { background-color: #f3f3f3; border: 0; height: 35px; border-radius: 10px; }
+	</style>
 		
 <!-- Selfies -->
 
@@ -34,7 +37,7 @@
 	  
 <div  style="padding: 50px; background-color:#87A3BD;">
 <h3> <center> <strong> SKILLS & TOOLS </strong> <center> </h3>
-	progress { background-color: #f3f3f3; border: 0; height: 35px; border-radius: 10px; }
+
 	<center> <p>Python</p> <progress value="65" max="100"/> </center>
 		
 	</div>
