--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <body>
 	<title>Jamie Clark</title>
 	<style>
-		progress { background-color: #f3f3f3; border: 0; height: 35px; border-radius: 10px; }
+		progress { background-color: #585D63; border: 0; height: 25px; border-radius: 10px; }
 	</style>
 		
 <!-- Selfies -->
@@ -38,7 +38,7 @@
 <div  style="padding: 50px; background-color:#87A3BD;">
 <h3> <center> <strong> SKILLS & TOOLS </strong> <center> </h3>
 
-	<center> <p>Python</p> <progress value="65" max="100"/> </center>
+	<center> <p>Python</p> <progress value="65" max="100" min="0"/> </center>
 		
 	</div>
 
