--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 <div  style="padding: 50px; background-color:#87A3BD;">
 <h3> <center> <strong> SKILLS & TOOLS </strong> <center> </h3>
 
+	<div style="width:500px;height:100px;border:1px solid #585D63;"></div>
+	
 	<center> <p>Python</p> <progress value="65" max="100" min="0"/> </center>
 		
 	</div>
