--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <body>
 	<title>Jamie Clark</title>
-	<style>
-		progress { background-color: #585D63; border: 0; height: 25px; border-radius: 10px; }
-	</style>
+
 		
 <!-- Selfies -->
 
@@ -38,9 +36,7 @@
 <div  style="padding: 50px; background-color:#87A3BD;">
 <h3> <center> <strong> SKILLS & TOOLS </strong> <center> </h3>
 
-	<div style="width:500px;height:100px;border:1px solid #585D63;"></div>
-	
-	<center> <p>Python</p> <progress value="65" max="100" min="0"/> </center>
+	<div style="width:30px;height:100px;border:1px solid #585D63;></div>
 		
 	</div>
 
