--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 	<h4 style="color:white;"> <center>
 	Liberty University Class of 2022. Computer Science: Cyber Security & Mathematics major.
 		</center> </h4>
+	
+	
+	<span style="font-size:600%;color:white;">&#8595;</span>
+	
 
 	</div>
 <!-- About Me Section -->
