--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
 <!-- Name header -->
 	
-  <h1 style="color: white; font-family: cursive; font-size:72pt; font-style:italic">  <center> 
+  <h1 id="top" style="color: white; font-family: cursive; font-size:72pt; font-style:italic">  <center> 
   Jamie Clark 
 	  </center> </h1> 
 	
@@ -27,8 +27,18 @@
 	</div>
 <!-- About Me Section -->
 	
+	
 <div  style="padding:50px; background-color:#FFFFFF;">
- <h3> <center> <strong> ABOUT ME  </strong> <center> </h3>
+	<center>
+		<a href="#top">Jamie Clark</a>
+		<a href="#aboutme">About Me</a>
+		<a href="#skillstools">Skills & Tools</a>
+		<a href="#projects">Projects</a>
+		<a href="#experience">Experience</a>
+		<a href="#reveiws">Reviews</a>
+	</center>
+	
+ <h3 id="aboutme"> <center> <strong> ABOUT ME  </strong> <center> </h3>
  
  <p style="margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center> 
 	 Hello there! I'm Jamie, a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in Cyber Security. My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. 
@@ -38,19 +48,19 @@
 <!-- Skills & Tools Section -->
 	  
 <div  style="padding: 50px; background-color:#87A3BD;">
-<h3> <center> <strong> SKILLS & TOOLS </strong> <center> </h3>
+<h3 id="skillstools"> <center> <strong> SKILLS & TOOLS </strong> <center> </h3>
 	</div>
 
 <!-- Projects -->
 	
 <div  style="padding: 50px; background-color:#FFFFFF;">
-<h3> <center> <strong> PROJECTS  </strong> <center> </h3>
+<h3 id="projects"> <center> <strong> PROJECTS  </strong> <center> </h3>
 	</div>
 	 
 <!-- Experience -->
 	
 <div  style="padding: 50px; background-color:#585D63;">
-<h3> <center> <strong> EXPERIENCE  </strong> <center> </h3>
+<h3 id="experience"> <center> <strong> EXPERIENCE  </strong> <center> </h3>
 	</div>
 	 
 <!-- Reviews (Letters of Recommendation) -->
@@ -58,7 +68,7 @@
 <div  style="padding: 50px; background-color:#FFFFFF;">
 
 
-<h2> <center> <strong> REVIEWS  </strong> <center> </h2>
+<h2 id="reviews"> <center> <strong> REVIEWS  </strong> <center> </h2>
 	
 	<!-- Que's Letter -->
 	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <em><center> "...Jamie is positive and generous, providing a welcoming attitude to all who meet her. She is a great collaborator who works well with other students, providing leadership, commitment, and passion for everything she does. She is a hard worker, quick learner, and will be an amazing addition to any team..." <center><a href="Jamie Clark letter of rec.pdf">read more</a></center></em><br> - <strong>Que Dang, MPH</strong><br>Director, Student Equity and Success Center<br>Cuesta College, San Luis Obispo</center>
