--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</center> </h4>
 	
 	
-	<span style="font-size:600%;color:white;">&#8595;</span>
+	<center><span style="font-size:750%;color:white;">&#8595;</span></center>
 	
 
 	</div>
