--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</center> </h4>
 	
 	
-	<center><span style="font-size:750%;color:white;">&#8595;</span></center>
+	<center><span style="margin:50px; font-size:750%; color:white; ">&#8595;</span></center>
 	
 
 	</div>
