--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 	
 <div  style="padding:50px; background-color:#FFFFFF;">
 	<center>
-		<a href="#top">Jamie Clark</a>
-		<a href="#aboutme">About Me</a>
-		<a href="#skillstools">Skills & Tools</a>
-		<a href="#projects">Projects</a>
-		<a href="#experience">Experience</a>
-		<a href="#reveiws">Reviews</a>
+		<a href="#top" style="color:white;">Jamie Clark</a>
+		<a href="#aboutme" style="color:white;">About Me</a>
+		<a href="#skillstools" style="color:white;">Skills & Tools</a>
+		<a href="#projects" style="color:white;">Projects</a>
+		<a href="#experience" style="color:white;">Experience</a>
+		<a href="#reveiws" style="color:white;">Reviews</a>
 	</center>
 	
  <h3 id="aboutme"> <center> <strong> ABOUT ME  </strong> <center> </h3>
