--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 	
 <div  style="padding:50px; background-color:#FFFFFF;">
 	<center>
-		<a href="#top" style="color:black;">Jamie Clark</a>
-		<a href="#aboutme" style="color:black;">About Me</a>
-		<a href="#skillstools" style="color:black;">Skills & Tools</a>
-		<a href="#projects" style="color:black;">Projects</a>
-		<a href="#experience" style="color:black;">Experience</a>
-		<a href="#reveiws" style="color:black;">Reviews</a>
+		<a href="#top" style="color:black; text-decoration:none">Jamie Clark</a>
+		<a href="#aboutme" style="color:black; text-decoration:none">About Me</a>
+		<a href="#skillstools" style="color:black; text-decoration:none">Skills & Tools</a>
+		<a href="#projects" style="color:black; text-decoration:none">Projects</a>
+		<a href="#experience" style="color:black; text-decoration:none">Experience</a>
+		<a href="#reveiws" style="color:black; text-decoration:none">Reviews</a>
 	</center>
 	
  <h3 id="aboutme"> <center> <strong> ABOUT ME  </strong> <center> </h3>
