--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 	Liberty University Class of 2022. Computer Science: Cyber Security & Mathematics major.
 		</center> </h4>
 	
+	<center>
+	<a href="https://www.instagram.com/_jamie.clark_/"><img src="flower.jpg" style="width:100px; height:100px" alt="Instagram"></a>
+	</center>
 	
 	<center><span style="margin:50px; font-size:750%; color:white; ">&#8595;</span></center>
 	
