--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</center> </h4>
 	
 	<center>
-	<a href="https://www.instagram.com/_jamie.clark_/"><img src="instagram-symbol.png" style="width:100px; height:100px" alt="Instagram"></a>
+	<a href="https://www.instagram.com/_jamie.clark_/"><img src="instagram-symbol.jpg" style="width:100px; height:100px" alt="Instagram"></a>
 	</center>
 	
 	<center><span style="margin:50px; font-size:750%; color:white; ">&#8595;</span></center>
