--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	
 <div  style="padding:50px; background-color:#FFFFFF;">
 	<center>
-		<a href="#top" style="color:black; text-decoration:none">Jamie Clark</a>
+		<a href="#top" style="color:black; text-decoration:none"><font>padding-right: 30px;</font>Jamie Clark</a>
 		<a href="#aboutme" style="color:black; text-decoration:none">About Me</a>
 		<a href="#skillstools" style="color:black; text-decoration:none">Skills & Tools</a>
 		<a href="#projects" style="color:black; text-decoration:none">Projects</a>
