--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 	
 <div  style="padding:50px; background-color:#FFFFFF;">
 	<center>
-		<a href="#top" style="color:black; text-decoration:none"><font>padding-right: 30px;</font>Jamie Clark</a>
-		<a href="#aboutme" style="color:black; text-decoration:none">About Me</a>
-		<a href="#skillstools" style="color:black; text-decoration:none">Skills & Tools</a>
-		<a href="#projects" style="color:black; text-decoration:none">Projects</a>
-		<a href="#experience" style="color:black; text-decoration:none">Experience</a>
-		<a href="#reveiws" style="color:black; text-decoration:none">Reviews</a>
+		<a href="#top" style="color:black; text-decoration:none">Jamie Clark<font>padding-right: 30px;</font></a>
+		<a href="#aboutme" style="color:black; text-decoration:none">About Me<font>padding-right: 30px;</font></a>
+		<a href="#skillstools" style="color:black; text-decoration:none">Skills & Tools<font>padding-right: 30px;</font></a>
+		<a href="#projects" style="color:black; text-decoration:none">Projects<font>padding-right: 30px;</font></a>
+		<a href="#experience" style="color:black; text-decoration:none">Experience<font>padding-right: 30px;</font></a>
+		<a href="#reveiws" style="color:black; text-decoration:none">Reviews<font>padding-right: 30px;</font></a>
 	</center>
 	
  <h3 id="aboutme"> <center> <strong> ABOUT ME  </strong> <center> </h3>
