--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 <div  style="padding:50px; background-color: #365271;">
   <center>
-    <img src="IMG_2895.jpg" alt="selfie" width="249.9375" height="375">
-    <img src="IMG_2894.JPG" alt="selfie" width="249.9375" height="375">
+    <img src="IMG_2895.jpg" alt="selfie" width="249.9375" height="375" hspace="30">
+    <img src="IMG_2894.JPG" alt="selfie" width="249.9375" height="375" hspace="30">
   </center> 
 	
 <!-- Name header -->
@@ -37,12 +37,12 @@
 	
 <div  style="padding:50px; background-color:#FFFFFF;">
 	<center>
-		<a href="#top" style="color:black; text-decoration:none">Jamie Clark<font>padding-right: 30px;</font></a>
-		<a href="#aboutme" style="color:black; text-decoration:none">About Me<font>padding-right: 30px;</font></a>
-		<a href="#skillstools" style="color:black; text-decoration:none">Skills & Tools<font>padding-right: 30px;</font></a>
-		<a href="#projects" style="color:black; text-decoration:none">Projects<font>padding-right: 30px;</font></a>
-		<a href="#experience" style="color:black; text-decoration:none">Experience<font>padding-right: 30px;</font></a>
-		<a href="#reveiws" style="color:black; text-decoration:none">Reviews<font>padding-right: 30px;</font></a>
+		<a href="#top" style="color:black; text-decoration:none; padding-right: 30px;">Jamie Clark</a>
+		<a href="#aboutme" style="color:black; text-decoration:none; padding-right: 30px;">About Me</a>
+		<a href="#skillstools" style="color:black; text-decoration:none; padding-right: 30px;">Skills & Tools</a>
+		<a href="#projects" style="color:black; text-decoration:none; padding-right: 30px;">Projects</a>
+		<a href="#experience" style="color:black; text-decoration:none; padding-right: 30px;">Experience</a>
+		<a href="#reveiws" style="color:black; text-decoration:none; padding-right: 30px;">Reviews</a>
 	</center>
 	
  <h3 id="aboutme"> <center> <strong> ABOUT ME  </strong> <center> </h3>
