--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 
 <div  style="padding:50px; background-color: #365271;">
   <center>
+    <img src="IMG_2893.JPG" alt="selfie" width="249.9375" height="375" hspace="30">
     <img src="IMG_2895.jpg" alt="selfie" width="249.9375" height="375" hspace="30">
     <img src="IMG_2894.JPG" alt="selfie" width="249.9375" height="375" hspace="30">
+	  
   </center> 
 	
 <!-- Name header -->
