--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		</p>
 	
 	<!-- Alysha's Letter -->
-	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center><em>"...Whaterver your standard of excellence, Jamie will exceed your expectations. She has an uncanny ability to see ineffeciences and areas in need of improvement, as well as map out comprehensive solutions to resolve them. I appreciate her solution-oriented persepctive and communication syle..."<center><a href="jamies_letter.pdf">read more</a></center><br> - <strong>Alysha Nye</strong></em><br>Academic Success Coach<br>Student Success Center, Statistics Lab</center>
+	<p style="font-family: georgia; font-size:14pt; margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center><em>"...Whaterver your standard of excellence, Jamie will exceed your expectations. She has an uncanny ability to see ineffeciences and areas in need of improvement, as well as map out comprehensive solutions to resolve them. I appreciate her solution-oriented persepctive and communication syle..."<center><a href="jamies_letter.pdf">read more</a></center><br></em> - <strong>Alysha Nye</strong><br>Academic Success Coach<br>Student Success Center, Statistics Lab</center>
 		<center>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
 	<span style="font-size:300%;color:yellow;">&starf;</span>
