--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<br>
 	<br>
 	<center>
-	<a href="https://www.instagram.com/_jamie.clark_/"><img src="instagram-symbol.jpg" style="width:50px; height:50px" alt="Instagram" hspace="25"></a>
+	<a href="https://www.instagram.com/_jamie.clark_/"><img src="fullsizeoutput_387.jpeg" style="width:50px; height:50px" alt="Instagram" hspace="25"></a>
 	<a href="https://github.com/JamieLClark"><img src="github-logo-2.jpg" style="width:50px; height:50px" alt="GitHub" hspace="25"></a>
 	<a href="https://www.linkedin.com/in/jamie-clark-770762180/"><img src="linkedin-logo.jpg" style="width:50px; height:50px" alt="LinkedIn" hspace="25"></a>
 	<a href="https://liberty.joinhandshake.com/users/17748580"><img src="relationship.jpg" style="width:50px; height:50px" alt="HandShake" hspace="25"></a>
