--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 	<br>
 	<center>
 	<a href="https://www.instagram.com/_jamie.clark_/"><img src="insta_icon.jpg" style="width:50px; height:50px" alt="Instagram" hspace="25" class="circular-image"></a>
-	<a href="https://github.com/JamieLClark"><img src="github_icon.jpg" style="width:50px; height:50px" alt="GitHub" hspace="25"></a>
-	<a href="https://www.linkedin.com/in/jamie-clark-770762180/"><img src="linkedin_icon.jpg" style="width:50px; height:50px" alt="LinkedIn" hspace="25"></a>
-	<a href="https://liberty.joinhandshake.com/users/17748580"><img src="handshake_icon-512@2x.jpg" style="width:50px; height:50px" alt="HandShake" hspace="25"></a>
-	<a href="https://www.instagram.com/_jamie.clark_/"><img src="email_icon.jpg" style="width:50px; height:50px" alt="Email" hspace="25"></a>
-	<a href="https://www.instagram.com/_jamie.clark_/"><img src="pdfdownload_icon.jpg" style="width:50px; height:50px" alt="Resume PDF" hspace="25"></a>
+	<a href="https://github.com/JamieLClark"><img src="github_icon.jpg" style="width:50px; height:50px" alt="GitHub" hspace="25" class="circular-image"></a>
+	<a href="https://www.linkedin.com/in/jamie-clark-770762180/"><img src="linkedin_icon.jpg" style="width:50px; height:50px" alt="LinkedIn" hspace="25" class="circular-image"></a>
+	<a href="https://liberty.joinhandshake.com/users/17748580"><img src="handshake_icon-512@2x.jpg" style="width:50px; height:50px" alt="HandShake" hspace="25" class="circular-image"></a>
+	<a href="https://www.instagram.com/_jamie.clark_/"><img src="email_icon.jpg" style="width:50px; height:50px" alt="Email" hspace="25" class="circular-image"></a>
+	<a href="https://www.instagram.com/_jamie.clark_/"><img src="pdfdownload_icon.jpg" style="width:50px; height:50px" alt="Resume PDF" hspace="25" class="circular-image"></a>
 	</center>
 	
 	
