--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <body>
 	<title>Jamie Clark</title>
 	<style>
+		.mainRunner { border: 1px solid #000; position: relative; }
+		.img1 { border: 1px solid #f00; position: relative; z-index: 2; }
+		.img2 { border: 1px solid #0f0; position: relative; z-index: 1; top: -12px; left: 12px:}
+		.img3 { border: 1px solid #f00; position: relative; z-index: 3; top: -12px; right; 12px; }
+		
+		
 		.circular-image { border-radius: 50%; }
+		
+		
 	</style>
 
 		
 <!-- Selfies -->
 
-<div  style="padding:50px; background-color: #365271;">
+<div  class="mainRunner" style="padding:50px; background-color: #365271;">
   <center>
-    <img src="IMG_2893.JPG" alt="selfie" width="249.9375" height="375" hspace="30">
-    <img src="IMG_2895.jpg" alt="selfie" width="249.9375" height="375" hspace="30">
-    <img src="IMG_2894.JPG" alt="selfie" width="249.9375" height="375" hspace="30">
+    <img class="img1" src="IMG_2893.JPG" alt="selfie" width="249.9375" height="375" hspace="30">
+    <img class="img2" src="IMG_2895.jpg" alt="selfie" width="249.9375" height="375" hspace="30">
+    <img class="img3" src="IMG_2894.JPG" alt="selfie" width="249.9375" height="375" hspace="30">
 	  
   </center> 
 	
