--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <body>
 	<title>Jamie Clark</title>
 	<style>
-		.mainRunner { border: 1px solid #000; position: relative; }
-		.img1 { border: 1px solid #f00; position: relative; z-index: 2; }
-		.img2 { border: 1px solid #0f0; position: relative; z-index: 1; top: -12px; left: 12px:}
-		.img3 { border: 1px solid #f00; position: relative; z-index: 3; top: -12px; right; 12px; }
+		.mainRunner { position: relative; }
+		.img1 { position: relative; z-index: 2; }
+		.img2 { position: relative; z-index: 1; top: -60px; left: 80px:}
+		.img3 { position: relative; z-index: 3; top: -60px; right; 80px; }
 		
 		
 		.circular-image { border-radius: 50%; }
