--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <!-- About Me Section -->
 	
 	
-<div  style="padding:50px; background-color:#FFFFFF;">
+<div  style="padding:50px; background-color:#DED5C8;">
 	<center>
 		<a href="#top" style="color:black; text-decoration:none; padding-right: 30px;">Jamie Clark</a>
 		<a href="#aboutme" style="color:black; text-decoration:none; padding-right: 30px;">About Me</a>
@@ -76,7 +76,7 @@
 
 <!-- Projects -->
 	
-<div  style="padding: 50px; background-color:#FFFFFF;">
+<div  style="padding: 50px; background-color:#DED5C8;">
 <h3 id="projects"> <center> <strong> PROJECTS  </strong> <center> </h3>
 	</div>
 	 
@@ -88,7 +88,7 @@
 	 
 <!-- Reviews (Letters of Recommendation) -->
 	
-<div  style="padding: 50px; background-color:#FFFFFF;">
+<div  style="padding: 50px; background-color:#DED5C8;">
 
 
 <h2 id="reviews"> <center> <strong> REVIEWS  </strong> <center> </h2>
