--- a/index.html
+++ b/index.html
@@ -70,13 +70,15 @@
 <!-- Projects -->
 	
 <div  style="padding: 50px; background-color:#FFFFFF;">
-<h3 id="projects"> <center> <strong> PROJECTS  </strong> <center> </h3>
+<h2 id="projects"> <center> <strong> PROJECTS  </strong> <center> </h2>
+	
+	<img src="computer.jpg" alt="computer" width="249.9375" height="375">
 	</div>
 	 
 <!-- Experience -->
 	
 <div  style="padding: 50px; background-color:#585D63;">
-<h3 id="experience"> <center> <strong> EXPERIENCE  </strong> <center> </h3>
+<h2 id="experience"> <center> <strong> EXPERIENCE  </strong> <center> </h2>
 	</div>
 	 
 <!-- Reviews (Letters of Recommendation) -->
