--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <div  style="padding: 50px; background-color:#FFFFFF;">
 <h2 id="projects"> <center> <strong> PROJECTS  </strong> <center> </h2>
 	
-	<img src="computer.jpg" alt="computer" width="249.9375" height="375">
+	<center> <img src="computer.jpg" alt="computer" width="300" height="300"> </center>
 	</div>
 	 
 <!-- Experience -->
