--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<title>Jamie Clark</title>
 	<style>
 		.mainRunner { position: relative; text-align: center; color: white; }
-		.img1 { position: relative; z-index: 2; }
+
 		.img2 { position: relative; z-index: 1; top: -60px; left: -80px:}
 		.img3 { position: relative; z-index: 3; top: -60px; right; -80px; }
 		.centered { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
@@ -18,7 +18,7 @@
 
 <div class="mainRunner" style="padding:50px; background-color: #365271;">
   <center>
-    <img class="img1" src="IMG_2893.JPG" alt="selfie" width="249.9375" height="375" hspace="30">
+
     <img class="img2" src="IMG_2895.jpg" alt="selfie" width="249.9375" height="375" hspace="30">
     <img class="img3" src="IMG_2894.JPG" alt="selfie" width="249.9375" height="375" hspace="30">
 	  
@@ -54,7 +54,7 @@
 		<a href="#reveiws" style="color:black; text-decoration:none; padding-right: 30px;">Reviews</a>
 	</center>
 	
- <h3 id="aboutme"> <center> <strong> ABOUT ME  </strong> <center> </h3>
+ <h2 id="aboutme"> <center> <strong> ABOUT ME  </strong> <center> </h2>
  
  <p style="margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center> 
 	 Hello there! I'm Jamie, a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in Cyber Security. My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. 
@@ -64,7 +64,7 @@
 <!-- Skills & Tools Section -->
 	  
 <div  style="padding: 50px; background-color:#87A3BD;">
-<h3 id="skillstools"> <center> <strong> SKILLS & TOOLS </strong> <center> </h3>
+<h2 id="skillstools"> <center> <strong> SKILLS & TOOLS </strong> <center> </h2>
 	</div>
 
 <!-- Projects -->
@@ -72,7 +72,16 @@
 <div  style="padding: 50px; background-color:#FFFFFF;">
 <h2 id="projects"> <center> <strong> PROJECTS  </strong> <center> </h2>
 	
-	<center> <img src="computer.jpg" alt="computer" width="300" height="300"> </center>
+	<center> <img src="computer.jpg" alt="computer" width="200" height="200"> </center>
+	<p style="margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center> 
+	 ...this is where I would describe current projects... 
+	 </center> </h5> 
+	
+	<center> <img src="computer.jpg" alt="computer" width="200" height="200"> </center>
+	<p style="margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center> 
+	 ...this is where I would describe current projects... 
+	 </center> </h5> 
+	
 	</div>
 	 
 <!-- Experience -->
