--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<style>
 		.mainRunner { position: relative; text-align: center; color: white; }
 
-		.img2 { position: relative; z-index: 1; top: -60px; left: -80px:}
-		.img3 { position: relative; z-index: 3; top: -60px; right; -80px; }
+		.img2 { position: relative; z-index: 1; left: -80px:}
+		.img3 { position: relative; z-index: 2; right; -80px; }
 		.centered { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
 		
 		
@@ -76,6 +76,11 @@
 	<p style="margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center> 
 	 ...this is where I would describe current projects... 
 	 </center> </h5> 
+	
+	<br>
+	<br>
+	<br>
+	<br>
 	
 	<center> <img src="computer.jpg" alt="computer" width="200" height="200"> </center>
 	<p style="margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center> 
