--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 	<title>Jamie Clark</title>
 	<style>
 		.mainRunner { position: relative; text-align: center; color: white; }
-
-		.img2 { position: relative; z-index: 1; left: -80px:}
-		.img3 { position: relative; z-index: 2; right; -80px; }
 		.centered { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
 		
 		
@@ -18,9 +15,9 @@
 
 <div class="mainRunner" style="padding:50px; background-color: #365271;">
   <center>
-
-    <img class="img2" src="IMG_2895.jpg" alt="selfie" width="249.9375" height="375" hspace="30">
-    <img class="img3" src="IMG_2894.JPG" alt="selfie" width="249.9375" height="375" hspace="30">
+    <img src="IMG_2893.JPG" alt="selfie" width="249.9375" height="375" hspace="30" class="circular-image">
+    <img src="IMG_2895.jpg" alt="selfie" width="249.9375" height="375" hspace="30" class="circular-image">
+    <img src="IMG_2894.JPG" alt="selfie" width="249.9375" height="375" hspace="30" class="circular-image">
 	  
   </center> 
 	
