--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <div class="mainRunner" style="padding:50px; background-color: #365271;">
   <center>
-    <img src="IMG_2893.JPG" alt="selfie" width="249.9375" height="375" hspace="30" class="circular-image">
-    <img src="IMG_2895.jpg" alt="selfie" width="249.9375" height="375" hspace="30" class="circular-image">
+    <img src="IMG_2893.JPG" alt="selfie" width="249.9375" height="375" hspace="30" class="circular-image"> <br>
+    <img src="IMG_2895.jpg" alt="selfie" width="249.9375" height="375" hspace="30" class="circular-image"> <br>
     <img src="IMG_2894.JPG" alt="selfie" width="249.9375" height="375" hspace="30" class="circular-image">
 	  
   </center> 
