--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
 	  </center> </h1> 
 	<br>
 	<br>
+	<div style="margin-top: 5px; margin-left: 350px; margin-right: 350px; border:3px; border-style:solid; border-color:#FFFFFF; padding: 1em;">
+		<h4><strong> I'M JAMIE! </strong></h4>
+		<p> <center> 
+			<em> it's nice to meet you!</em> <br> I am a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in Cyber Security. My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. 
+	 </center> </h5> 
+	</div>
 	<br>
 	
 	<h3 style="color:white;"> <center>
@@ -56,7 +62,7 @@
 	
  <h2 id="aboutme"> <center> <strong> ABOUT ME  </strong> <center> </h2>
  
- <p style="margin-top: 5px; margin-left: 350px; margin-right: 350px;"> <center> 
+ <p style="margin-top: 5px; margin-left: 350px; margin-right: 350px; border:3px; border-style:solid; border-color:#FFFFFF; padding: 1em;"> <center> 
 	 Hello there! I'm Jamie, a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in Cyber Security. My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. 
 	 </center> </h5> 
 	 </div>
