--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		
 <!-- Selfies -->
 
-<div class="mainRunner" style="padding:50px; background-color: #365271;">
+<div style="padding:50px; background-color: #365271;">
     <img src="IMG_2893.JPG" alt="selfie" width="249.9375" height="375" hspace="30"> <br><br>
     <img src="IMG_2895.jpg" alt="selfie" width="249.9375" height="375" hspace="30"> <br><br>
     <img src="IMG_2894.JPG" alt="selfie" width="249.9375" height="375" hspace="30">
