--- a/index.html
+++ b/index.html
@@ -14,21 +14,15 @@
 <!-- Selfies -->
 
 <div style="padding:50px; background-color: #365271;">
-    <img src="IMG_2893.JPG" alt="selfie" width="249.9375" height="375" hspace="30"> <br><br>
     <img src="IMG_2895.jpg" alt="selfie" width="249.9375" height="375" hspace="30"> <br><br>
-    <img src="IMG_2894.JPG" alt="selfie" width="249.9375" height="375" hspace="30">
+
 	  
 	
 <!-- Name header -->
-	
-  <h1 class="centered" id="top" style="color: white; font-family: cursive; font-size:86pt; font-style:italic">  <center> 
-  Jamie Clark 
-	  </center> </h1> 
-	<br>
-	<br>
+
 	<div style="margin-top: 5px; margin-left: 350px; margin-right: 350px; border:3px; border-style:solid; border-color:#FFFFFF; padding: 1em;">
 		<h4><strong> I'M JAMIE! </strong></h4>
-		<p style="text: white;"> 
+		<p style="color: white;"> 
 			<em> It's nice to meet you!</em> <br><br> I am a 23 year old Computer Science and Mathematics major at Liberty University in Lynchburg Virginia focusing in Cyber Security. My passion for coding is new but strong. Before transferring to Liberty I began my education at Cuesta College in San Luis Obispo California (<em> Yup, I am West Coast gal on the East Coast! </em>), this is where I was introduced to coding. At Cuesta I also discovered my love for tutoring mathematics, from one-on-one to group supplemental instruction workshops ranging from topics in basic arithmetic to precalculus and everything in between. 
 	 </h5> 
 	</div>
