--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <body>
 	<title>Jamie Clark</title>
+	
+	<!-- 	CSS Stuff	-->
+	
 	<style>
 		.mainRunner { position: relative; text-align: center; color: white; }
 		.centered { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
@@ -9,6 +12,21 @@
 		
 		
 	</style>
+	
+<!-- Menu Bar -->
+	
+<div style="padding: 50px; background-color: #FFFFFF;">   
+	<h1 class="centered" id="top" style="font-family: cursive; font-size:48pt; font-style:italic"> <center> 
+  Jamie Clark </center> </h1> 
+	<center>
+		<a href="#top" style="color:black; text-decoration:none; padding-right: 30px;">Jamie Clark</a>
+		<a href="#aboutme" style="color:black; text-decoration:none; padding-right: 30px;">About Me</a>
+		<a href="#skillstools" style="color:black; text-decoration:none; padding-right: 30px;">Skills & Tools</a>
+		<a href="#projects" style="color:black; text-decoration:none; padding-right: 30px;">Projects</a>
+		<a href="#experience" style="color:black; text-decoration:none; padding-right: 30px;">Experience</a>
+		<a href="#reveiws" style="color:black; text-decoration:none; padding-right: 30px;">Reviews</a>
+	</center>
+	<div/>
 
 		
 <!-- Selfies -->
@@ -43,14 +61,7 @@
 	
 	
 <div  style="padding:50px; background-color:#FFFFFF;">
-	<center>
-		<a href="#top" style="color:black; text-decoration:none; padding-right: 30px;">Jamie Clark</a>
-		<a href="#aboutme" style="color:black; text-decoration:none; padding-right: 30px;">About Me</a>
-		<a href="#skillstools" style="color:black; text-decoration:none; padding-right: 30px;">Skills & Tools</a>
-		<a href="#projects" style="color:black; text-decoration:none; padding-right: 30px;">Projects</a>
-		<a href="#experience" style="color:black; text-decoration:none; padding-right: 30px;">Experience</a>
-		<a href="#reveiws" style="color:black; text-decoration:none; padding-right: 30px;">Reviews</a>
-	</center>
+
 	
  <h2 id="aboutme"> <center> <strong> ABOUT ME  </strong> <center> </h2>
  
