--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Menu Bar -->
 	
 <div style="padding: 50px; background-color: #FFFFFF;">   
-	<h1 class="centered" id="top" style="font-family: cursive; font-size:48pt; font-style:italic"> <center> 
+	<h1 class="centered" id="top" style="color: black; font-family: cursive; font-size:48pt; font-style:italic"> <center> 
   Jamie Clark </center> </h1> 
 	<center>
 		<a href="#top" style="color:black; text-decoration:none; padding-right: 30px;">Jamie Clark</a>
@@ -26,6 +26,7 @@
 		<a href="#experience" style="color:black; text-decoration:none; padding-right: 30px;">Experience</a>
 		<a href="#reveiws" style="color:black; text-decoration:none; padding-right: 30px;">Reviews</a>
 	</center>
+	<br><br>
 	<div/>
 
 		
