--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	
 <!-- Menu Bar -->
 	
-<div style="padding: 50px; background-color: #FFFFFF;">   
+<div style="background-color: #FFFFFF;">   
 	<h1 id="top" style="color: black; font-family: cursive; font-size:48pt; font-style:italic"> <center> 
   Jamie Clark </center> </h1> 
 	<center>
