--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 <!-- Menu Bar -->
 	
 <div style="background-color: #FFFFFF;">   
-	<h1 id="top" style="color: black; font-family: cursive; font-size:48pt; font-style:italic"> <center> 
-  Jamie Clark </center> </h1> 
-	<center>
-		<a href="#top" style="color:black; text-decoration:none; padding-right: 30px;">Jamie Clark</a>
-		<a href="#aboutme" style="color:black; text-decoration:none; padding-right: 30px;">About Me</a>
-		<a href="#skillstools" style="color:black; text-decoration:none; padding-right: 30px;">Skills & Tools</a>
-		<a href="#projects" style="color:black; text-decoration:none; padding-right: 30px;">Projects</a>
-		<a href="#experience" style="color:black; text-decoration:none; padding-right: 30px;">Experience</a>
-		<a href="#reveiws" style="color:black; text-decoration:none; padding-right: 30px;">Reviews</a>
-	</center>
+	<h1 id="top" style="text-align: left; color: black; font-family: cursive; font-size:24pt; font-style:italic"> 
+  J C </h1> 
+	
+	<a href="#top" style="font-size:24pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Jamie Clark</a>
+	<a href="#aboutme" style="font-size:24pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">About Me</a>
+	<a href="#skillstools" style="font-size:24pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Skills & Tools</a>
+	<a href="#projects" style="font-size:24pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Projects</a>
+	<a href="#experience" style="font-size:24pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Experience</a>
+	<a href="#reveiws" style="font-size:24pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Reviews</a>
+	
 	<br><br>
 	<div/>
 
