--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <!-- Menu Bar -->
 	
 <div style="background-color: #FFFFFF;">   
-	<h1 id="top" style="text-align: left; color: black; font-family: cursive; font-size:24pt; font-style:italic"> 
-  J C
+	<p id="top" style="text-align: left; color: black; font-family: cursive; font-size:24pt; font-style:italic"> 
+  J C  </p> 
 	
 	<a href="#top" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Jamie Clark</a>
 	<a href="#aboutme" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">About Me</a>
@@ -26,7 +26,7 @@
 	<a href="#experience" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Experience</a>
 	<a href="#reveiws" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Reviews</a>
 		
-		 </h1> 
+
 	
 	<br><br>
 	<div/>
