--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		
 <!-- Selfies -->
 
-<div style="padding:50px; background-color: #365271;">
+<div style="padding:50px; background-color: #E2DFDD;">
     <img src="IMG_2895.jpg" alt="selfie" width="249.9375" height="375" hspace="30"> <br><br>
 
 	  
@@ -63,7 +63,7 @@
 <!-- About Me Section -->
 	
 	
-<div  style="padding:50px; background-color:#FFFFFF;">
+<div  style="padding:50px; background-color:#365271;">
 
 	
  <h2 id="aboutme"> <center> <strong> ABOUT ME  </strong> <center> </h2>
@@ -75,13 +75,13 @@
 	
 <!-- Skills & Tools Section -->
 	  
-<div  style="padding: 50px; background-color:#87A3BD;">
+<div  style="padding: 50px; background-color:#E2DFDD;">
 <h2 id="skillstools"> <center> <strong> SKILLS & TOOLS </strong> <center> </h2>
 	</div>
 
 <!-- Projects -->
 	
-<div  style="padding: 50px; background-color:#FFFFFF;">
+<div  style="padding: 50px; background-color:#87A3BD;">
 <h2 id="projects"> <center> <strong> PROJECTS  </strong> <center> </h2>
 	
 	<center> <img src="computer.jpg" alt="computer" width="200" height="200"> </center>
@@ -103,13 +103,13 @@
 	 
 <!-- Experience -->
 	
-<div  style="padding: 50px; background-color:#585D63;">
+<div  style="padding: 50px; background-color:#E2DFDD;">
 <h2 id="experience"> <center> <strong> EXPERIENCE  </strong> <center> </h2>
 	</div>
 	 
 <!-- Reviews (Letters of Recommendation) -->
 	
-<div  style="padding: 50px; background-color:#FFFFFF;">
+<div  style="padding: 50px; background-color:#585D63;">
 
 
 <h2 id="reviews"> <center> <strong> REVIEWS  </strong> <center> </h2>
