--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Menu Bar -->
 	
 <div style="background-color: #FFFFFF;">   
-	<p id="top" style="text-align: left; color: black; font-family: cursive; font-size:24pt; font-style:italic"> 
+	<p id="top" style="text-align: right; color: black; font-family: cursive; font-size:24pt; font-style:italic"> 
   J C  </p> 
 	
 	<a href="#top" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Jamie Clark</a>
