--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Menu Bar -->
 	
 <div style="background-color: #FFFFFF;">   
-	<p id="top" style="text-align: right; color: black; font-family: cursive; font-size:24pt; font-style:italic"> 
+	<p id="top" style="text-align: left; color: black; font-family: cursive; font-size:24pt; font-style:italic"> 
   J C  </p> 
 	
 	<a href="#top" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Jamie Clark</a>
@@ -35,7 +35,7 @@
 <!-- Selfies -->
 
 <div style="padding:50px; background-color: #E2DFDD;">
-    <img src="IMG_2895.jpg" alt="selfie" width="249.9375" height="375" hspace="30"> <br><br>
+    <img src="IMG_2895.jpg" aligh="right" alt="selfie" width="249.9375" height="375" hspace="30"> <br><br>
 
 	  
 	
