--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 
 <!-- Skills & Tools Section -->
 	  
-<div  style="padding: 50px; background-color:#E2DFDD;">
+<div  style="padding: 50px; background-color:#FAD7D0;">
 <h2 id="skillstools"> <center> <strong> SKILLS & TOOLS </strong> <center> </h2>
 	</div>
 
 <!-- Projects -->
 	
-<div  style="padding: 50px; background-color:#87A3BD;">
+<div  style="padding: 50px; background-color:#FFFFFF;">
 <h2 id="projects"> <center> <strong> PROJECTS  </strong> <center> </h2>
 	
 	<center> <img src="computer.jpg" alt="computer" width="200" height="200"> </center>
@@ -90,13 +90,13 @@
 	 
 <!-- Experience -->
 	
-<div  style="padding: 50px; background-color:#E2DFDD;">
+<div  style="padding: 50px; background-color:#E3D0DA;">
 <h2 id="experience"> <center> <strong> EXPERIENCE  </strong> <center> </h2>
 	</div>
 	 
 <!-- Reviews (Letters of Recommendation) -->
 	
-<div  style="padding: 50px; background-color:#585D63;">
+	<div  style="padding: 50px; background-color:#FFFFFF;">
 
 
 <h2 id="reviews"> <center> <strong> REVIEWS  </strong> <center> </h2>
