--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 		.mainRunner { position: relative; text-align: center; color: white; }
 		.centered { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
 		
+		.text { text-align: left; } 
+			p { display: inline-block; }
+			a { float: right; }
+			a { float: right; }
+			a { float: right; }
+			a { float: right; }
+			a { float: right; }
 		
 		.circular-image { border-radius: 50%; }
 		
@@ -15,9 +22,14 @@
 	
 <!-- Menu Bar -->
 	
-<div style="background-color: #FFFFFF;">   
-	<p id="top" style="text-align: left; color: black; font-family: cursive; font-size:24pt; font-style:italic"> 
-  J C  </p> <a href="#top" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Jamie Clark</a> <a href="#skillstools" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Skills & Tools</a> <a href="#projects" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Projects</a> <a href="#experience" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Experience</a> <a href="#reveiws" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Reviews</a>
+<div class="text" style="background-color: #FFFFFF;">   
+	<p id="top" style="color: black; font-family: cursive; font-size:24pt; font-style:italic"> 
+  J C  </p> 
+	<a href="#top" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Jamie Clark</a> 
+	<a href="#skillstools" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Skills & Tools</a> 
+	<a href="#projects" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Projects</a> 
+	<a href="#experience" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Experience</a> 
+	<a href="#reveiws" style="font-size:18pt; text-align: right; color:black; text-decoration:none; padding-right: 30px;">Reviews</a>
 		
 
 	
@@ -56,7 +68,7 @@
 
 <!-- Skills & Tools Section -->
 	  
-<div  style="padding: 50px; background-color:#FAD7D0;">
+<div  style="padding: 50px; background-color:#F7EFEC;">
 <h2 id="skillstools"> <center> <strong> SKILLS & TOOLS </strong> <center> </h2>
 	</div>
 
