--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!-- Selfies -->
 
 <div style="padding:50px; background-color: #E2DFDD;">
-    <img src="IMG_2895.jpg" aligh="right" alt="selfie" width="249.9375" height="375" hspace="30"> <br><br>
+    <img src="IMG_2895.jpg" aligh="right" alt="selfie" width="333.25" height="500" hspace="50"> 
 
 	  
 	
